<?xml version="1.0" encoding="utf-8"?><!--
  ~ The MIT License (MIT)
  ~
  ~ Copyright (c) 2016 Shopify Inc.
  ~
  ~ Permission is hereby granted, free of charge, to any person obtaining a copy
  ~ of this software and associated documentation files (the "Software"), to deal
  ~ in the Software without restriction, including without limitation the rights
  ~ to use, copy, modify, merge, publish, distribute, sublicense, and/or sell
  ~ copies of the Software, and to permit persons to whom the Software is
  ~ furnished to do so, subject to the following conditions:
  ~
  ~ The above copyright notice and this permission notice shall be included in
  ~ all copies or substantial portions of the Software.
  ~
  ~ THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR
  ~ IMPLIED, INCLUDING BUT NOT LIMITED TO THE WARRANTIES OF MERCHANTABILITY,
  ~ FITNESS FOR A PARTICULAR PURPOSE AND NONINFRINGEMENT. IN NO EVENT SHALL THE
  ~ AUTHORS OR COPYRIGHT HOLDERS BE LIABLE FOR ANY CLAIM, DAMAGES OR OTHER
  ~ LIABILITY, WHETHER IN AN ACTION OF CONTRACT, TORT OR OTHERWISE, ARISING FROM,
  ~ OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN
  ~ THE SOFTWARE.
  ~
  -->

<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:app="http://schemas.android.com/apk/res-auto"
  android:layout_margin="@dimen/mdLayoutSpacing_xs"
  style="@style/MdCardView.Card">

  <LinearLayout
    android:orientation="vertical"
    android:paddingBottom="@dimen/mdLayoutSpacing_sm"
    style="@style/MdCardView.Wrapper">

    <TextView
      android:layout_marginTop="@dimen/mdLayoutSpacing_xs"
      android:paddingLeft="@dimen/mdLayoutSpacing_sm"
      android:paddingRight="@dimen/mdLayoutSpacing_sm"
      android:paddingTop="@dimen/mdLayoutSpacing_sm"
      android:text="@string/text_use_credit_card"
      style="@style/MdText.Subhead1.SingleLine" />

    <LinearLayout
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:orientation="horizontal">

      <android.support.design.widget.TextInputLayout
        android:id="@+id/til_first_name"
        android:layout_width="0dp"
        android:layout_weight="1"
        style="@style/MdTextField.TextWithLabel">

        <android.support.design.widget.TextInputEditText
          android:id="@+id/input_first_name"
          android:hint="@string/text_first_name"
          android:imeOptions="actionNext"
          android:inputType="textCapWords"
          android:maxLines="1"
          style="@style/MdTextField.TextWithLabel.Text" />
      </android.support.design.widget.TextInputLayout>

      <android.support.design.widget.TextInputLayout
        android:id="@+id/til_last_name"
        android:layout_width="0dp"
        android:layout_weight="1"
        style="@style/MdTextField.TextWithLabel">

        <android.support.design.widget.TextInputEditText
          android:id="@+id/input_last_name"
          android:hint="@string/text_last_name"
          android:imeOptions="actionNext"
          android:inputType="textCapWords"
          android:maxLines="1"
          style="@style/MdTextField.TextWithLabel.Text" />
      </android.support.design.widget.TextInputLayout>
    </LinearLayout>

    <android.support.design.widget.TextInputLayout
      android:id="@+id/til_card_number"
      style="@style/MdTextField.TextWithLabel">

      <com.shopify.mobilebuysdk.demo.widget.MaskedEditText
        android:id="@+id/input_card_number"
        android:hint="@string/text_credit_card_no"
        android:imeOptions="actionNext"
        android:inputType="numberSigned"
        android:maxLines="1"
        app:mask="#### #### #### #### #### ####"
        style="@style/MdTextField.TextWithLabel.Text" />
    </android.support.design.widget.TextInputLayout>

    <LinearLayout
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:orientation="horizontal">

      <android.support.design.widget.TextInputLayout
        android:id="@+id/til_expires"
        android:layout_width="0dp"
        android:layout_weight="1"
        style="@style/MdTextField.TextWithLabel">

        <com.shopify.mobilebuysdk.demo.widget.MaskedEditText
          android:id="@+id/input_expires"
          android:hint="@string/text_expires"
          android:imeOptions="actionNext"
          android:inputType="numberSigned"
          android:maxLength="5"
          android:maxLines="1"
          app:mask="##-##"
          style="@style/MdTextField.TextWithLabel.Text" />
      </android.support.design.widget.TextInputLayout>

      <android.support.design.widget.TextInputLayout
        android:id="@+id/til_cvv_code"
        android:layout_width="0dp"
        android:layout_weight="1"
        style="@style/MdTextField.TextWithLabel">

        <android.support.design.widget.TextInputEditText
          android:id="@+id/input_cvv_code"
          android:hint="@string/text_cvv_code"
          android:imeOptions="actionDone"
          android:inputType="numberSigned"
          android:maxLines="1"
          style="@style/MdTextField.TextWithLabel.Text" />
      </android.support.design.widget.TextInputLayout>
    </LinearLayout>
  </LinearLayout>
</android.support.v7.widget.CardView>