<?xml version="1.0" encoding="utf-8"?><!--
  ~ The MIT License (MIT)
  ~
  ~ Copyright (c) 2016 Shopify Inc.
  ~
  ~ Permission is hereby granted, free of charge, to any person obtaining a copy
  ~ of this software and associated documentation files (the "Software"), to deal
  ~ in the Software without restriction, including without limitation the rights
  ~ to use, copy, modify, merge, publish, distribute, sublicense, and/or sell
  ~ copies of the Software, and to permit persons to whom the Software is
  ~ furnished to do so, subject to the following conditions:
  ~
  ~ The above copyright notice and this permission notice shall be included in
  ~ all copies or substantial portions of the Software.
  ~
  ~ THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR
  ~ IMPLIED, INCLUDING BUT NOT LIMITED TO THE WARRANTIES OF MERCHANTABILITY,
  ~ FITNESS FOR A PARTICULAR PURPOSE AND NONINFRINGEMENT. IN NO EVENT SHALL THE
  ~ AUTHORS OR COPYRIGHT HOLDERS BE LIABLE FOR ANY CLAIM, DAMAGES OR OTHER
  ~ LIABILITY, WHETHER IN AN ACTION OF CONTRACT, TORT OR OTHERWISE, ARISING FROM,
  ~ OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN
  ~ THE SOFTWARE.
  ~
  -->

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:app="http://schemas.android.com/apk/res-auto"
  xmlns:tools="http://schemas.android.com/tools"
  android:layout_width="match_parent"
  android:layout_height="match_parent"
  xmlns:fresco="http://schemas.android.com/apk/res-auto">

  <android.support.design.widget.AppBarLayout
    android:id="@+id/app_bar_layout"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <android.support.v7.widget.Toolbar
      android:id="@+id/toolbar"
      app:navigationIcon="@drawable/ic_arrow_back_primary"
      style="@style/MdToolbar" />
  </android.support.design.widget.AppBarLayout>

  <Button
    android:id="@+id/btn_add_to_cart"
    android:layout_width="match_parent"
    android:layout_height="@dimen/mdListItemHeight_lg"
    android:layout_alignParentBottom="true"
    android:layout_marginBottom="@dimen/mdLayoutSpacingInverse_sm"
    android:layout_marginLeft="@dimen/mdLayoutSpacingInverse_sm"
    android:layout_marginRight="@dimen/mdLayoutSpacingInverse_sm"
    android:layout_marginTop="@dimen/mdLayoutSpacingInverse_sm"
    android:text="@string/text_add_to_cart"
    style="@style/MdButton.Colored" />

  <android.support.v4.widget.NestedScrollView
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_above="@id/btn_add_to_cart"
    android:layout_below="@id/app_bar_layout"
    android:background="?attr/mdColor_backgroundPalette_light">

    <LinearLayout
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:orientation="vertical">

      <com.facebook.drawee.view.SimpleDraweeView
        android:id="@+id/thumbnail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:color/white"
        android:transitionName="@string/transition_product_thumbnail"
        fresco:actualImageScaleType="fitCenter"
        fresco:viewAspectRatio="@dimen/thumbnail_ratio"
        tools:targetApi="lollipop" />

      <RelativeLayout style="@style/MdListItem.TwoLine.TextOnly">

        <LinearLayout style="@style/Base.MdListItem.Wrapper">

          <TextView
            android:text="$296.00"
            android:textColor="?attr/mdTextColorPrimary_backgroundPalette"
            android:textSize="@dimen/mdFontSize_title"
            style="@style/Base.MdListItem.Title" />

          <TextView
            android:text="@string/text_short"
            android:textColor="?attr/mdTextColorSecondary_backgroundPalette"
            style="@style/Base.MdListItem.Subtitle" />
        </LinearLayout>
      </RelativeLayout>

      <TextView
        android:layout_width="match_parent"
        android:paddingBottom="@dimen/mdLayoutSpacing"
        android:paddingLeft="@dimen/mdLayoutSpacing"
        android:paddingRight="@dimen/mdLayoutSpacing"
        android:text="@string/text_long"
        android:textColor="?attr/mdTextColorPrimary_backgroundPalette"
        style="@style/MdText.Body1" />
    </LinearLayout>
  </android.support.v4.widget.NestedScrollView>

  <View
    android:layout_width="match_parent"
    android:layout_height="@dimen/backgroundGradientSize_preLollipopOnly"
    android:layout_below="@id/app_bar_layout"
    android:background="@drawable/background_gradient_top_bottom" />
</RelativeLayout>